feat: civic vote identity integration
